more structure, fixed makefile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "files.associations": {
-    "map": "cpp"
+    "map": "cpp",
+    "atomic": "cpp",
+    "ios": "cpp",
+    "xiosbase": "cpp"
   }
 }
